# saturn

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
architecture/: system_overview.md
docs/: PROGRESS.md  engineering_principles.md  metrics.md  pipeline_anatomy.md  roadmap.md  system_overview.md  vision.md
examples/: nvda_research_report.md
saturn/: __init__.py  cli.py  config.py  diagnostics.py  models.py
saturn/agents/: critic.py  guidance.py  synthesist.py
saturn/analytics/: catalog.py  driver.py  forward.py  metrics.py
saturn/ingestion/: cache.py  consensus.py  dispatch.py  dossier.py  edgar.py  edgar_filings.py  errors.py  fred.py  http.py  identifiers.py  peers.py  prices.py
saturn/llm/: anthropic_client.py  base.py  mock_client.py
saturn/reports/: markdown_report.py
saturn/utils/: logging.py
saturn/workflows/: equity_research.py
tests/: conftest.py  test_anthropic_client.py  test_cli.py  test_config.py  test_diagnostics.py  test_equity_research.py  test_equity_research_workflow.py  test_ingestion.py  test_logging.py  test_markdown_report.py  test_mock_client.py  test_models.py  test_models_alpha.py  test_models_driver.py  test_package_imports.py
tests/agents/: test_critic.py  test_guidance.py  test_synthesist.py
tests/analytics/: test_catalog.py  test_driver.py  test_forward.py  test_metrics.py
tests/ingestion/: test_cache.py  test_consensus.py  test_dispatch.py  test_dossier.py  test_edgar.py  test_edgar_filings.py  test_errors.py  test_fred.py  test_http.py  test_identifiers.py  test_peers.py  test_quote.py
(+68 files in other folders)
